<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#1D1D1D"
    tools:context=".Gst_calculate">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="#1D1D1D">

        <ImageView
            android:id="@+id/gst_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:onClick="txt_back"
            android:src="@drawable/arrow_left_alt_24dp_fill0_wght400_grad0_opsz24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="GST calculate"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="@dimen/_5sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="start"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/header_initial_amount"
                  android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/initial_amount_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/roundad_corner"
                    android:inputType="numberDecimal"
                    android:hint="Buy price"
                    android:textColor="@color/white" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="start"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/header_rate_of_gst"
                  android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"/>

                <EditText
                    android:id="@+id/gst_rate_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/roundad_corner"
                    android:inputType="numberDecimal"
                    android:hint="Buy price"
                    android:textColor="@color/white" />

            </LinearLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/add_gst_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/opensans_regular"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/header_add_gst"
                  android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:buttonTint="@color/footer_color" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/subtract_gst_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/opensans_regular"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/header_subtract_gst"
                  android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:buttonTint="@color/footer_color" />

            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btn_business_reset"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/kanit_medium"
                    android:padding="@dimen/_1sdp"
                    android:backgroundTint="#4C4141"
                    android:text="@string/btn_reset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btn_business_calculate"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/footer_color"
                    android:fontFamily="@font/kanit_medium"
                    android:padding="@dimen/_1sdp"
                    android:text="@string/btn_calculate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/resultduration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#1D1D1D"
                android:layout_margin="@dimen/_10sdp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:elevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/header_net_amount"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/net_amount_edit_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_margin="@dimen/_10sdp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/header_gst_amount"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/gst_amount_edit_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_margin="@dimen/_10sdp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/header_total_amount_gst_involves"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/total_gst_involves"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_margin="@dimen/_10sdp" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/txt_cgst_sgst"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/_5sdp"
                        android:text="(CGST : 0.00% = 0)\n(SGST : 0.00% = 0)"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>




        </LinearLayout>

    </ScrollView>


</LinearLayout>